add more pages 05-04-2022

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -52,7 +52,7 @@
             <h1 class="banner_title">IPL 2022 Is Live</h1>
             <div class="banner_buttons">
                 <a href="https://www.youtube.com/watch?v=AIS_pwj51hA"><button class="banner_button">Play</button></a>
-                <button class="banner_button">My List</button>
+                <a href="/HTML/MyList.html"><button class="banner_button">My List</button></a>
             </div>
             <div class="banner_description">
                 <!-- This is our banner banner_description -->
@@ -65,27 +65,48 @@
     <div class="row">
         <h2>RECOMMENDED MOVIES</h2>
         <div class="row_posters">
-            <img src="/Images/img1.jpg" alt="" class="row_poster row_posterLarge">
-            <img src="/Images/img2.jpg" alt="" class="row_poster row_posterLarge">
-            <img src="/Images/img3.jpg" alt="" class="row_poster row_posterLarge">
-            <img src="/Images/img4.jpg" alt="" class="row_poster row_posterLarge">
-            <img src="/Images/img5.jpg" alt="" class="row_poster row_posterLarge">
-            <img src="/Images/img6.jpg" alt="" class="row_poster row_posterLarge">
-            <img src="/Images/img7.jpg" alt="" class="row_poster row_posterLarge">
+            <!--rec_movie_1-->
+            <img onclick="window.location.href='/HTML/rec_movie_1.html' " alt="" class="row_poster row_posterLarge"
+                src="/Images/img1.jpg">
+            <!-- <button class="btn btn-light  Book_Now_Button">Book Now</button> -->
 
-            <img src="/Images/img1.jpg" alt="" class="row_poster row_posterLarge">
+            <!--rec_movie_2-->
+            <img onclick="window.location.href='/HTML/rec_movie_2.html' " alt="" class="row_poster row_posterLarge"
+                src="/Images/img2.jpg">
+
+            <!--rec_movie_3-->
+            <img onclick="window.location.href='/HTML/rec_movie_3.html' " alt="" class="row_poster row_posterLarge"
+                src="/Images/img3.jpg">
+
+            <!--rec_movie_4-->
+            <img onclick="window.location.href='/HTML/rec_movie_4.html' " alt="" class="row_poster row_posterLarge"
+                src="/Images/img4.jpg">
+
+            <!--rec_movie_5-->
+            <img onclick="window.location.href='/HTML/rec_movie_5.html' " alt="" class="row_poster row_posterLarge"
+                src="/Images/img5.jpg">
+
+            <!--rec_movie_6-->
+            <img onclick="window.location.href='/HTML/rec_movie_6.html' " alt="" class="row_poster row_posterLarge"
+                src="/Images/img6.jpg">
+
+            <!--rec_movie_7-->
+            <img onclick="window.location.href='/HTML/rec_movie_7.html' " alt="" class="row_poster row_posterLarge"
+                src="/Images/img7.jpg">
+
+            <!-- <img src="/Images/img1.jpg" alt="" class="row_poster row_posterLarge">
             <img src="/Images/img2.jpg" alt="" class="row_poster row_posterLarge">
             <img src="/Images/img3.jpg" alt="" class="row_poster row_posterLarge">
             <img src="/Images/img4.jpg" alt="" class="row_poster row_posterLarge">
             <img src="/Images/img5.jpg" alt="" class="row_poster row_posterLarge">
             <img src="/Images/img6.jpg" alt="" class="row_poster row_posterLarge">
-            <img src="/Images/img7.jpg" alt="" class="row_poster row_posterLarge">
+            <img src="/Images/img7.jpg" alt="" class="row_poster row_posterLarge"> -->
         </div>
     </div>
 
     <!--Trending Now-->
     <div class="row">
-        <h2>TRANDING NOW</h2>
+        <h2>TRENDING NOW</h2>
         <div class="row_posters">
             <img src="/Images/img1.jpg" alt="" class="row_poster">
             <img src="/Images/img2.jpg" alt="" class="row_poster">
@@ -95,13 +116,13 @@
             <img src="/Images/img6.jpg" alt="" class="row_poster">
             <img src="/Images/img7.jpg" alt="" class="row_poster">
 
-            <img src="/Images/img1.jpg" alt="" class="row_poster">
+            <!-- <img src="/Images/img1.jpg" alt="" class="row_poster">
             <img src="/Images/img2.jpg" alt="" class="row_poster">
             <img src="/Images/img3.jpg" alt="" class="row_poster">
             <img src="/Images/img4.jpg" alt="" class="row_poster">
             <img src="/Images/img5.jpg" alt="" class="row_poster">
             <img src="/Images/img6.jpg" alt="" class="row_poster">
-            <img src="/Images/img7.jpg" alt="" class="row_poster">
+            <img src="/Images/img7.jpg" alt="" class="row_poster"> -->
         </div>
     </div>
 
@@ -117,13 +138,13 @@
             <img src="/Images/img6.jpg" alt="" class="row_poster">
             <img src="/Images/img7.jpg" alt="" class="row_poster">
 
-            <img src="/Images/img1.jpg" alt="" class="row_poster">
+            <!-- <img src="/Images/img1.jpg" alt="" class="row_poster">
             <img src="/Images/img2.jpg" alt="" class="row_poster">
             <img src="/Images/img3.jpg" alt="" class="row_poster">
             <img src="/Images/img4.jpg" alt="" class="row_poster">
             <img src="/Images/img5.jpg" alt="" class="row_poster">
             <img src="/Images/img6.jpg" alt="" class="row_poster">
-            <img src="/Images/img7.jpg" alt="" class="row_poster">
+            <img src="/Images/img7.jpg" alt="" class="row_poster"> -->
         </div>
     </div>
     <!-- 
