add time slots in booknow.html page

--- a/HTML/BookNow.html
+++ b/HTML/BookNow.html
@@ -23,6 +23,54 @@
             transform: scale(1.08);
             transition: transform 300ms;
         }
+
+        .container {
+            font-size: 20px;
+            user-select: none;
+            font-style: italic;
+            font-family: cursive;
+            font-weight: bold;
+        }
+
+        /* .days {
+            width: 1000px;
+        } */
+
+        .day {
+            width: 120px;
+            height: 100px;
+            /* background-color: #efeff6; */
+            padding: 10px;
+            float: left;
+            margin-right: 15px;
+            margin-top: 20px;
+        }
+
+        .datelabel {
+            margin-bottom: 15px;
+        }
+
+        .timeslot {
+            background-color: #00c09d;
+            width: 120px;
+            height: 40px;
+            color: white;
+            padding: 5px;
+            margin-top: 20px;
+            margin-left: 20px;
+            font-size: 18px;
+            border-radius: 7px;
+            /* vertical-align: center; */
+            text-align: center;
+            display: table-cell;
+            display: inline-block;
+            box-shadow: inset 0 0 0 1px;
+        }
+
+        .timeslot:hover {
+            background-color: #2CA893;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -63,22 +111,72 @@
     <div class="container">
         <div class="row1">
             <div class="row">
-                <div class="col">Row 1</div>
+                <div class="col">INOX: Sapna Sangeeta Mall
+                    <div>
+                        <div class="timeslot">9:00am</div>
+                        <div class="timeslot">12:00am</div>
+                        <div class="timeslot">3:00am</div>
+                        <div class="timeslot">6:00am</div>
+                    </div>
+                </div>
             </div>
+
+
             <div class="row">
-                <div class="col">Row 2</div>
+                <div class="col">INOX: Sapna Sangeeta Mall
+                    <div>
+                        <div class="timeslot">9:00am</div>
+                        <div class="timeslot">12:00am</div>
+                        <div class="timeslot">3:00am</div>
+                        <div class="timeslot">6:00am</div>
+                    </div>
+                </div>
             </div>
+
             <div class="row">
-                <div class="col">Row 3</div>
+                <div class="col">INOX: Sapna Sangeeta Mall
+                    <div>
+                        <div class="timeslot">9:00am</div>
+                        <div class="timeslot">12:00am</div>
+                        <div class="timeslot">3:00am</div>
+                        <div class="timeslot">6:00am</div>
+                    </div>
+                </div>
             </div>
+
+
             <div class="row">
-                <div class="col">Row 4</div>
+                <div class="col">INOX: Sapna Sangeeta Mall
+                    <div>
+                        <div class="timeslot">9:00am</div>
+                        <div class="timeslot">12:00am</div>
+                        <div class="timeslot">3:00am</div>
+                        <div class="timeslot">6:00am</div>
+                    </div>
+                </div>
             </div>
+
+
             <div class="row">
-                <div class="col">Row 5</div>
+                <div class="col">INOX: Sapna Sangeeta Mall
+                    <div>
+                        <div class="timeslot">9:00am</div>
+                        <div class="timeslot">12:00am</div>
+                        <div class="timeslot">3:00am</div>
+                        <div class="timeslot">6:00am</div>
+                    </div>
+                </div>
             </div>
+
             <div class="row">
-                <div class="col">Row 6</div>
+                <div class="col">INOX: Sapna Sangeeta Mall
+                    <div>
+                        <div class="timeslot">9:00am</div>
+                        <div class="timeslot">12:00am</div>
+                        <div class="timeslot">3:00am</div>
+                        <div class="timeslot">6:00am</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
