--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -19,6 +19,7 @@
             <!-- <a class="navbar-brand">BookYourShow</a> -->
 
             <img src="/Images/logo.png" alt="" class="nav_logo">
+            <div class="maintext">BookYourShow</div>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -63,7 +64,7 @@
 
     <!--Netflix Originals-->
     <div class="row">
-        <h2>RECOMMENDED MOVIES</h2>
+        <h2 class="text">RECOMMENDED MOVIES</h2>
         <div class="row_posters">
             <!--rec_movie_1-->
             <img onclick="window.location.href='/HTML/rec_movie_1.html' " alt="" class="row_poster row_posterLarge"
@@ -106,7 +107,7 @@
 
     <!--Trending Now-->
     <div class="row">
-        <h2>TRENDING NOW</h2>
+        <h2 class="text">TRENDING NOW</h2>
         <div class="row_posters">
             <img src="/Images/img1.jpg" alt="" class="row_poster">
             <img src="/Images/img2.jpg" alt="" class="row_poster">
@@ -128,7 +129,7 @@
 
     <!--Top Rated-->
     <div class="row">
-        <h2>TOP RATED </h2>
+        <h2 class="text">TOP RATED </h2>
         <div class="row_posters">
             <img src="/Images/img1.jpg" alt="" class="row_poster">
             <img src="/Images/img2.jpg" alt="" class="row_poster">
