Registration Page Added 06-04-2022

--- a/HTML/BookNow.html
+++ b/HTML/BookNow.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="/CSS/styles.css">
     <style>
         .col {
-            background-color: rgb(131, 131, 131);
+            /* background-color: rgb(131, 131, 131); */
             border: 1px solid black;
         }
+
 
         .row {
             height: 100px;
@@ -82,6 +83,8 @@
             <!-- <a class="navbar-brand">BookYourShow</a> -->
 
             <img src="/Images/logo.png" alt="" class="nav_logo">
+            <div class="maintext">BookYourShow</div>
+
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
                     data-bs-toggle="dropdown" aria-expanded="false">
