Login Page Added

--- a/HTML/registration.html
+++ b/HTML/registration.html
@@ -32,11 +32,13 @@
         }
 
         .registerbtn {
-            background-color: rgb(241, 89, 241);
+            background-color: rgb(255, 255, 255);
+            padding: 1% 7%;
+
         }
 
         .registerbtn:hover {
-            background-color: rgb(185, 185, 185);
+            background-color: rgb(205, 85, 199);
             transition: transform 450ms;
             transform: scale(1.20);
         }
@@ -46,9 +48,9 @@
         }
 
         .bg-image {
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-image: url("/Images/thor5.png");
+            /* background-repeat: no-repeat; */
+            /* background-size: cover; */
+            background-image: url("/Images/thor1.jpg");
         }
     </style>
 </head>
@@ -100,7 +102,8 @@
                                     </div>
 
                                     <p class="text-center text-muted mt-5 mb-0 form-label">Have already an account? <a
-                                            href="#!" class="fw-bold text-body"><u class="form-label">Login here</u></a>
+                                            href="/HTML/login.html" class="fw-bold text-body"><u
+                                                class="form-label">Login here</u></a>
                                     </p>
 
                                 </form>
