Registration Page Connectivity With DataBase 06-04-2022

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -43,7 +43,7 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
 
-            <button type="button" class="btn btn-light  signin">Log In</button>
+            <a href="/HTML/login.html"><button type="button" class="btn btn-light  signin">Log In</button></a>
         </div>
     </nav>
 
