--- a/HTML/registration.html
+++ b/HTML/registration.html
@@ -71,19 +71,18 @@
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">Your Name</label>
-                                        <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                                        <input type="text" id="uname" class="form-control form-control-lg" />
 
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example3cg">Your Email</label>
-                                        <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                                        <input type="email" id="email" class="form-control form-control-lg" />
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example4cg">Password</label>
-                                        <input type="password" id="form3Example4cg"
-                                            class="form-control form-control-lg" />
+                                        <input type="password" id="pass" class="form-control form-control-lg" />
                                     </div>
 
                                     <div class="form-check d-flex justify-content-center mb-5">
@@ -98,7 +97,8 @@
 
                                     <div class="d-flex justify-content-center">
                                         <button type="button"
-                                            class="btn-block btn-lg gradient-custom-4 text-body registerbtn">Register</button>
+                                            class="btn-block btn-lg gradient-custom-4 text-body registerbtn"
+                                            id="RegisterBtn">Register</button>
                                     </div>
 
                                     <p class="text-center text-muted mt-5 mb-0 form-label">Have already an account? <a
@@ -115,6 +115,61 @@
             </div>
         </div>
     </section>
+    <!----------------------------------------------------- Registration.JS ------------------------------------------------------->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js";
+
+        import { getDatabase, set, ref, child, get, onValue, update }
+            from "https://www.gstatic.com/firebasejs/9.6.7/firebase-database.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyCixKBXmM2r8M4k2peUH7roMm40Ohx5A8Y",
+            authDomain: "bookyourshow-9c1f5.firebaseapp.com",
+            databaseURL: "https://bookyourshow-9c1f5-default-rtdb.firebaseio.com",
+            projectId: "bookyourshow-9c1f5",
+            storageBucket: "bookyourshow-9c1f5.appspot.com",
+            messagingSenderId: "430499662430",
+            appId: "1:430499662430:web:d1b813748385cf013a42cf",
+            measurementId: "G-V0WMX170VY"
+        };
+
+        // ----------------------------------------------------- Initialize Firebase ---------------------------------------------//
+        const app = initializeApp(firebaseConfig);
+        const arr = ["@", "#", "$", "%", "&", "/", "*", "-", "~", "[", "]", "{", "}", "?", ";", ":"];
+        const db = getDatabase();
+
+        function writeUserData() {
+
+            let isValid = true;
+            let Username = document.getElementById('uname').value.trim();
+            let Password = document.getElementById('pass').value;
+            let Email = document.getElementById('email').value;
+
+            localStorage.setItem("user_name", Username);
+            localStorage.setItem("Email", Email);
+
+            // validation for special characters 
+            arr.forEach(check => {
+                if (Username.includes(check)) {
+                    isValid = false;
+                    alert('Invalid Characters!');
+                    location.reload();
+                }
+            });
+
+            // User Registration
+            let gameUniqueId = Username;
+            set(ref(db, "Registered Users/" + gameUniqueId), {
+                email: Email,
+                uname: Username,
+                pass: Password,
+            }).then(() => { alert('User Registered'); })
+        }
+
+        var register = document.getElementById('RegisterBtn');
+        register.addEventListener('click', writeUserData);
+    </script>
+    <!---------------------------------------------------------------------------------------------------------------------------->
 </body>
 
 </html>
