--- a/HTML/BookNow.html
+++ b/HTML/BookNow.html
@@ -108,7 +108,8 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
 
-            <button type="button" class="btn btn-light  signin">Log In</button>
+            <a href="/HTML/login.html"><button type="button" class="btn btn-light  signin">Log In</button></a>
+
         </div>
     </nav>
     <div class="container">
