Login Page Connectivity

--- a/HTML/BookNow.html
+++ b/HTML/BookNow.html
@@ -149,7 +149,19 @@
             </div>
 
 
-            <div class="row">
+            <!-- <div class="row">
+                <div class="col">INOX: Sapna Sangeeta Mall
+                    <div>
+                        <div class="timeslot">9:00am</div>
+                        <div class="timeslot">12:00am</div>
+                        <div class="timeslot">3:00am</div>
+                        <div class="timeslot">6:00am</div>
+                    </div>
+                </div>
+            </div> -->
+
+
+            <!-- <div class="row">
                 <div class="col">INOX: Sapna Sangeeta Mall
                     <div>
                         <div class="timeslot">9:00am</div>
@@ -160,7 +172,6 @@
                 </div>
             </div>
 
-
             <div class="row">
                 <div class="col">INOX: Sapna Sangeeta Mall
                     <div>
@@ -170,18 +181,7 @@
                         <div class="timeslot">6:00am</div>
                     </div>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col">INOX: Sapna Sangeeta Mall
-                    <div>
-                        <div class="timeslot">9:00am</div>
-                        <div class="timeslot">12:00am</div>
-                        <div class="timeslot">3:00am</div>
-                        <div class="timeslot">6:00am</div>
-                    </div>
-                </div>
-            </div>
+            </div> -->
         </div>
     </div>
     </div>
