--- a/HTML/login.html
+++ b/HTML/login.html
@@ -50,6 +50,10 @@
             /* background-repeat: no-repeat; */
             /* background-size: cover; */
             background-image: url("/Images/thor1.jpg");
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 0;
         }
     </style>
 </head>
