--- a/HTML/registration.html
+++ b/HTML/registration.html
@@ -51,6 +51,10 @@
             /* background-repeat: no-repeat; */
             /* background-size: cover; */
             background-image: url("/Images/thor1.jpg");
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 0;
         }
     </style>
 </head>
@@ -156,18 +160,27 @@
                     location.reload();
                 }
             });
-
-            // User Registration
-            let gameUniqueId = Username;
-            set(ref(db, "Registered Users/" + gameUniqueId), {
-                email: Email,
-                uname: Username,
-                pass: Password,
-            }).then(() => { alert('User Registered'); })
+            if (Username != "" && Password != "" && Email != "") {
+                let UniqueId = Username;
+                set(ref(db, "Registered Users/" + UniqueId), {
+                    email: Email,
+                    uname: Username,
+                    pass: Password,
+                }).then(() => { alert('User Registered'); })
+            }
+            else {
+                alert("Please Enter Something !");
+            }
         }
+
+        // User Registration
+
 
         var register = document.getElementById('RegisterBtn');
         register.addEventListener('click', writeUserData);
+
+
+
     </script>
     <!---------------------------------------------------------------------------------------------------------------------------->
 </body>
