Seat Booking Page Added

--- a/HTML/BookNow.html
+++ b/HTML/BookNow.html
@@ -117,10 +117,16 @@
             <div class="row">
                 <div class="col">INOX: Sapna Sangeeta Mall
                     <div>
-                        <div class="timeslot">9:00am</div>
-                        <div class="timeslot">12:00am</div>
-                        <div class="timeslot">3:00am</div>
-                        <div class="timeslot">6:00am</div>
+                        <div class="timeslot" id="timeid">9:00am</div>
+                        <script>
+                            document.getElementById("timeid").onclick = function () {
+                                location.href = "/HTML/SeatBooking.html"
+                            }
+
+                        </script>
+                        <div class="timeslot" id="timeid">12:00am</div>
+                        <div class="timeslot" id="timeid">3:00am</div>
+                        <div class="timeslot" id="timeid">6:00am</div>
                     </div>
                 </div>
             </div>
@@ -129,10 +135,10 @@
             <div class="row">
                 <div class="col">INOX: Sapna Sangeeta Mall
                     <div>
-                        <div class="timeslot">9:00am</div>
-                        <div class="timeslot">12:00am</div>
-                        <div class="timeslot">3:00am</div>
-                        <div class="timeslot">6:00am</div>
+                        <div class="timeslot" id="timeid">9:00am</div>
+                        <div class="timeslot" id="timeid">12:00am</div>
+                        <div class="timeslot" id="timeid">3:00am</div>
+                        <div class="timeslot" id="timeid">6:00am</div>
                     </div>
                 </div>
             </div>
@@ -140,10 +146,10 @@
             <div class="row">
                 <div class="col">INOX: Sapna Sangeeta Mall
                     <div>
-                        <div class="timeslot">9:00am</div>
-                        <div class="timeslot">12:00am</div>
-                        <div class="timeslot">3:00am</div>
-                        <div class="timeslot">6:00am</div>
+                        <div class="timeslot" id="timeid">9:00am</div>
+                        <div class="timeslot" id="timeid">12:00am</div>
+                        <div class="timeslot" id="timeid">3:00am</div>
+                        <div class="timeslot" id="timeid">6:00am</div>
                     </div>
                 </div>
             </div>
