--- a/HTML/login.html
+++ b/HTML/login.html
@@ -101,7 +101,7 @@
 
                                     <p class="text-center text-muted mt-5 mb-0 form-label">Not a member ? <a
                                             href="/HTML/registration.html" class="fw-bold text-body"><u
-                                                class="form-label">Register First</u></a>
+                                                class="form-label">Register</u></a>
                                     </p>
 
                                 </form>
