--- a/HTML/rec_movie_2.html
+++ b/HTML/rec_movie_2.html
@@ -80,7 +80,8 @@
         <div class="innerdiv2">
             <!-- <img src="/Images/img2.jpg" alt="" class="row_poster row_posterLarge displayimg"> -->
             <div>Avengers</div>
-            <button type="button" class="btn btn-danger me-md-2 booknow">Book Now</button>
+            <a href="/HTML/BookNow.html"><button type="button" class="btn btn-danger me-md-2 booknow">
+                    Book Now</button></a>
         </div>
     </div>
 </body>
